Add link to GitHub repository

--- a/options.html
+++ b/options.html
@@ -19,5 +19,6 @@
   </form>
 
     <p>2013 © <a href="mailto:alexandr.zhuravlev@gmail.com">A.Z.</a></p>
+	<p><a href="https://github.com/alezhu/SavePearlHarbor_Chrome_extension">GitHub source</a></p>
 </body>
 </html>
